--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "fairy-server - open source",
     "main": "main.ts",
     "scripts": {
+        "test": "standard",
         "start": "node dist/fairy_server.js",
         "serve": "nodemon dist/fairy_server.js",
         "build": "npm run build-ts",
@@ -22,6 +23,7 @@
     },
     "devDependencies": {
         "cross-env": "^5.2.0",
+        "standard": "^12.0.1",
         "tslint": "^5.10.0",
         "typescript": "^3.0.1"
     },
